# SnakeGame

./: Cargo.toml  README.md  index.html  snake-game.d.ts  snake-game_bg.wasm.d.ts
src/: boundary_collision_system.rs  collision_system.rs  components.rs  food_despawner_system.rs  food_eating_system.rs  food_spawner_system.rs  main.rs  score_rendering_system.rs  setup.rs  snake_movement_system.rs  tail_collision_system.rs  tail_movement_system.rs  tail_spawner.rs
unusedsrc/: tail_growth_system.rs
